--- a/Pages/EasyData/EasyDataEntity.cshtml
+++ b/Pages/EasyData/EasyDataEntity.cshtml
@@ -1,6 +1,4 @@
 ﻿@page "/easydata/{**entity}"
-@model UniCodeProject.API.Pages.EasyDataEntityModel
-
 @{
     ViewData["Title"] = "EasyData";
     Layout = null;
@@ -10,8 +8,9 @@
 
 <div id="EasyDataContainer"></div>
 
-<form method="post" asp-page-handler="Logout">
-    <button type="submit">Изход</button>
+<form method="post" action="/admin/logout">
+    @Html.AntiForgeryToken()
+    <button type="submit">Logout</button>
 </form>
 
 <script src="https://cdn.korzh.com/ed/1.4.8/easydata.min.js" type="text/javascript"></script>
